# packpack

./: Cargo.toml  README.md
scripts/: bootstrap.sh  logging.sh  platform.sh
src/: error.rs  lib.rs  name.rs
src/config/: installers.rs  installers.toml  layers.rs  layers.toml  mod.rs  platforms.rs  platforms.toml
src/package/: inspect.rs  install.rs  mod.rs
test-pkgs/Rust/: package.toml
