[package]
name = "packpack"
description = "Meta-package manager for cross-machine sync"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "packpack"
path = "src/bin/main.rs"
required-features = ["command-line"]

[features]
default = ["command-line"]
command-line = ["pretty_env_logger", "structopt", "text_trees"]

[dependencies]
ansi_term = "0.12.1"
dirs = "3.0.1"
error-chain = "0.12.2"
lazy_static = "1.4.0"
log = "0.4.11"
serde = { version = "1.0.115", features = ["derive"] }
toml = "0.5.6"
which = "4.0.2"

text_trees = { version = "0.1.2", optional = true }
pretty_env_logger = { version = "0.4.0", optional = true }
structopt = { version = "0.3.16", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"